--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 /* Reset CSS */
 @import url(reset.css);
 
+/* ==========
+Global styles
+========== */
+
 *,
 *::before,
 *::after {
@@ -15,13 +19,17 @@ body {
   font-family: "Smythe", system-ui;
 }
 
-/* Typography */
+/* ==========
+Typography
+========== */
+
 .site-title {
-  font-size: 2.4375rem;
+  font-size: 2.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .site-subtitle {
-  font-size: 1.375rem;
+  font-size: 1.5rem;
 }
 
 .menu-item__icon {
@@ -29,41 +37,33 @@ body {
   opacity: 0.72;
 }
 
-.menu-item__title,
-.menu-item__subtitle,
-.menu-item__price {
+.menu-item__name {
+  font-size: 1.75rem;
   margin-bottom: 0.5rem;
 }
 
-.menu-item__title,
-.order-summary__title,
-.order-summary-item__title {
-  font-size: 1.75rem;
-}
-
-.menu-item__subtitle {
-  font-size: 1rem;
+.menu-item__ingredients {
   color: #8b8b8b;
+  font-size: 1rem;
+  margin-bottom: 0.75rem;
 }
 
 .menu-item__price,
-.order-summary-item__price,
-.order-summary__price {
+.order-item__price,
+.order-item__quantity,
+.total-price__price {
   font-size: 1.25rem;
 }
 
 .order-summary__title {
+  font-size: 1.75rem;
   text-align: center;
+  margin-bottom: 2rem;
 }
 
-.order-summary-item__price,
-.order-summary__price {
-  margin-left: auto;
-}
-
-.order-summary__total {
-  font-size: 1.5rem;
-  margin-bottom: 3rem;
+.order-item__name,
+.total-price__text {
+  font-size: 1.75rem;
 }
 
 /* Buttons */
@@ -71,28 +71,34 @@ body {
 .btn {
   display: inline-block;
   cursor: pointer;
+}
+
+.btn--circle {
+  background: none;
+  font-family: "Inter", sans-serif;
+  font-size: 2rem;
+  font-weight: 200;
+  padding: 0.2em 0.5em;
+  border: 1.5px #dedede solid;
+  border-radius: 50%;
+}
+
+.btn--remove-item {
+  background: none;
+  color: #bbb;
   font-family: "Verdana", sans-serif;
-  font-size: 1rem;
+  font-size: 0.75;
+  border: none;
 }
 
 .btn--rounded {
+  font-family: "Verdana", sans-serif;
+  font-size: 1rem;
+  font-weight: 700;
   padding: 1em 1.5em;
+  border: none;
   border-radius: 3px;
   width: 100%;
-  border: none;
-  font-weight: 700;
-}
-
-.btn--round {
-  font-family: "Inter", sans-serif;
-  font-size: 1.5rem;
-  font-weight: 200;
-  color: #3c3c3c;
-  border: 1.5px #dedede solid;
-  border-radius: 50%;
-  background: none;
-  padding: 0.3em 0.6em;
-  margin-left: auto;
 }
 
 .btn--primary {
@@ -100,14 +106,13 @@ body {
   color: #fff;
 }
 
-.btn--remove {
-  color: #bbb;
-  background: none;
-  border: none;
-  font-size: 0.75rem;
+.align-right {
+  margin-left: auto;
 }
 
-/* Layout */
+/* ==========
+Layout
+========== */
 
 body {
   max-width: 600px;
@@ -115,70 +120,59 @@ body {
 }
 
 .container {
-  padding: 0 2rem;
+  width: 90%;
+  margin: 0 auto;
 }
 
-.row {
-  display: flex;
-}
-
-.header {
-  background-image: url("images/hamburger-banner.png");
+header {
+  background-image: url("./images/hamburger-banner.png");
+  color: #fff;
   background-position: center;
   background-size: cover;
-  padding: 2rem 0;
-  color: #fff;
+  padding: 3em 0;
 }
 
 .menu {
-  padding: 1.5rem 0;
+  padding: 2.5em 0;
 }
 
 .menu-item {
   display: flex;
   align-items: center;
-  gap: 1.25rem;
-  padding: 2rem 0;
+  gap: 1.5em;
+  padding: 2em 0 2.5em;
   border-bottom: 1px #d2d2d2 solid;
 }
 
-.order-summary-list {
+.order-summary {
+  padding: 0 0 2em;
+}
+
+.order-items {
   border-bottom: 2px #393333 solid;
   margin-bottom: 1rem;
 }
 
-.order-summary-item {
+.order-item {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.order-item:last-child {
+  margin-bottom: 2rem;
+}
+
+.total-price__info {
+  display: flex;
+  align-items: center;
+  margin-bottom: 3rem;
 }
 
 /* Payment Modal */
 
-.payment-modal-form__title {
-  font-size: 1.5rem;
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 2rem;
-}
-
-.payment-modal-form__input {
-  font-size: 1.25rem;
-  display: block;
-  margin-bottom: 1rem;
-  padding: 0.75em;
-  width: 100%;
-  border: 1px #757575 solid;
-  border-radius: 4px;
-}
-
-.payment-modal-form__input:last-of-type {
-  margin-bottom: 2rem;
-}
-
 .payment-modal {
-  font-family: "Verdana", sans-serif;
   position: fixed;
   inset: 0;
   display: flex;
@@ -189,26 +183,55 @@ body {
 .payment-modal-overlay {
   position: absolute;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.75);
 }
 
-.payment-modal-form {
+.payment-modal-content {
   position: relative;
   background-color: #fff;
-  padding: 2rem;
+  max-width: 525px;
+  padding: 2em;
   border-radius: 4px;
-  box-shadow: 0 0 100px rgba(0, 0, 0, 0.5);
-  width: 525px;
+}
+
+.payment-form {
+  font-family: "Verdana", sans-serif;
+}
+
+.payment-form__title {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.payment-form__input {
+  font-size: 1.25rem;
+  width: 100%;
+  padding: 0.75em;
+  border: 1px #757575 solid;
+  border-radius: 4px;
+  margin-bottom: 1.25rem;
+}
+
+.payment-form__input:last-of-type {
+  margin-bottom: 3rem;
 }
 
 .hidden {
   display: none;
 }
 
+/* Thank You */
+
 .thank-you {
   background-color: #ecfdf5;
   color: #065f46;
-  font-size: 2rem;
-  padding: 1em 1.5em;
   text-align: center;
+  padding: 2em;
+  margin-bottom: 2rem;
+}
+
+.thank-you-text {
+  font-size: 2rem;
 }
